index, в лисе placeholder, ie11 input::focus

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 	<div class="container">
 		<div class="logo">
-			<img src="img/logo.png" width="368" height="204" alt="Барбершоп «Бородинский»" title="Барбершоп «Бородинский»">
+			<img src="img/logo.png" width="368" height="152" alt="Барбершоп «Бородинский»" title="Барбершоп «Бородинский»">
 		</div>
 		<section class="features-row clearfix">
 			<div class="features-item">
@@ -121,8 +121,8 @@
 					<h2 class="content-column-title">Записаться</h2>
 					<p>Укажите желаемую дату и время и мы свяжемся с вами для подтверждения брони</p>
 					<form action="/echo" method="post">
-						<input type="date" name="date" value="" placeholder="Дата">
-						<input type="time" name="time" value="" placeholder="Время">
+						<input type="text" name="date" value="" placeholder="Дата">
+						<input type="text" name="time" value="" placeholder="Время">
 						<input type="text" name="name" value="" placeholder="Ваше имя">
 						<input type="tel" name="phone" value="" placeholder="Телефон">
 						<button type="submit" class="btn">Отправить</button>
@@ -143,12 +143,12 @@
 			</section>
 			<section class="footer-social">
 				<p>Давайте дружить!</p>
-				<a href="#" class="social-btn social-btn-vk">Вконтакте</a>
-				<a href="#" class="social-btn social-btn-fb">Фейсбук</a>
-				<a href="#" class="social-btn social-btn-inst">Инстаграм</a>
+				<a href="#" class="social-btn social-btn-vk"></a>
+				<a href="#" class="social-btn social-btn-fb"></a>
+				<a href="#" class="social-btn social-btn-inst"></a>
 			</section>
 			<section class="footer-copyright">
-				<p>Дизайн сайта:</p>
+				<p>Разработано:</p>
 				<a href="#" class="btn">htmlacademy.ru</a>
 			</section>
 		</div>
