--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<a href="#">Новости</a>
 					</li>
 					<li>
-						<a href="#">Прайс-лист</a>
+						<a href="pages/barbershop-price.html">Прайс-лист</a>
 					</li>
 					<li>
 						<a href="pages/catalog.html">Магазин</a>
@@ -133,7 +133,7 @@
 		<div class="container clearfix">
 			<section class="footer-contacts">
 				Барбершоп «Бородинский»
-				<br>Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8
+				<br>Адрес: г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
 				<br>
 				<a href="#">Как нас найти?</a>
 				<br>телефон: +7 (495) 666-02-66
@@ -146,7 +146,7 @@
 			</section>
 			<section class="footer-copyright">
 				<p>Разработано:</p>
-				<a href="#" class="btn">htmlacademy.ru</a>
+				<a href="https://htmlacademy.ru/" class="btn">htmlacademy.ru</a>
 			</section>
 		</div>
 	</footer>
